[gd_scene load_steps=2 format=3 uid="uid://cvnjs70go1nfc"]

[ext_resource type="Script" uid="uid://cwfl7kl1bae4" path="res://scenes/quests/story_quests/ElUltimoBosque/1_ElUltimoBosque_stealth/secondary_hud.gd" id="1_hpk5d"]

[node name="SecondaryHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 7.0
offset_right = 227.0
offset_bottom = 124.0
script = ExtResource("1_hpk5d")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 209.0
offset_bottom = 104.0

[node name="ObjectSlot1" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
stretch_mode = 5

[node name="ObjectSlot2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
stretch_mode = 5

[node name="ObjectSlot3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
stretch_mode = 5
